--- a/Clases/Clase-14/.env.example
+++ b/Clases/Clase-14/.env.example
@@ -5,6 +5,5 @@ FIREBASE_AUTH_DOMAIN=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_MESSAGING_SENDER_ID=
-FIRABAE_APP_ID=
-FIRABAE_MEASUREMENT_ID=
-JWT_SECRET=
+FIREBASE_APP_ID=
+
